src/CsbindgenHandsOn/Native/CNativeMethodsMyStack.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace CsbindgenHandsOn.Native
{
    internal static unsafe partial class CNativeMethodsMyStack
    {
        const string __DllName = "csbindgenhandson";



        [DllImport(__DllName, EntryPoint = "cffi_myStack_create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern MyStack* myStack_create(int maxLength);

        [DllImport(__DllName, EntryPoint = "cffi_myStack_pop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int myStack_pop(MyStack* myStack);

        [DllImport(__DllName, EntryPoint = "cffi_myStack_push", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void myStack_push(MyStack* myStack, int val);

        [DllImport(__DllName, EntryPoint = "cffi_myStack_delete", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void myStack_delete(MyStack* myStack);


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct MyStack
    {
        public int index;
        public int* data;
    }



}
